--- a/style.css
+++ b/style.css
@@ -10,3 +10,8 @@ svg {
     left: 50%;
     transform: scale(1.6, 1.6) translate(-32%, -30%);
 }
+
+h2 {
+    text-align: center;
+    font-family: Arial;
+}
